--- a/RDIP/Codes/CSS/style.css
+++ b/RDIP/Codes/CSS/style.css
@@ -26,3 +26,22 @@ select{
     color:navy;
     font-weight:lighter;
 }
+#jumbled-buttons{
+   
+    font-weight:lighter;
+    margin-left:360px;
+}
+#btn{
+    height:40px;
+    width:100px;
+    text-align:center;
+    cursor:pointer;
+    border:1px solid grey;
+    outline:none;
+    border-radius:6px;
+    margin-left:13px;
+    
+}
+#btn:hover{
+    background-color: lightgray;
+}
