--- a/RDIP/Codes/CSS/style.css
+++ b/RDIP/Codes/CSS/style.css
@@ -31,7 +31,7 @@ select{
     font-weight:lighter;
     margin-left:360px;
 }
-#btn{
+.btn{
     height:40px;
     width:100px;
     text-align:center;
@@ -42,6 +42,24 @@ select{
     margin-left:13px;
     
 }
-#btn:hover{
+.btn:hover{
     background-color: lightgray;
+}
+#formed-sentence{
+    color:blue;
+    font-size:26px;
+    margin-left:490px;
+}
+span{
+    font-size:19px;
+    color:navy;
+    font-weight:lighter;
+}
+
+
+#selectedWo{
+   font-size:30px;
+     color:black;
+     padding:16px;
+     text-align: center;
 }
