--- a/RDIP/Codes/CSS/style.css
+++ b/RDIP/Codes/CSS/style.css
@@ -109,3 +109,9 @@ span{
 #getcorrect:hover{
     background-color: lightgray;
 }
+#result{
+    text-align:center;
+    font-size:20px;
+    margin-top:12px;
+    color:black;
+}
