--- a/RDIP/Codes/CSS/style.css
+++ b/RDIP/Codes/CSS/style.css
@@ -111,7 +111,7 @@ span{
 }
 #result{
     text-align:center;
-    font-size:20px;
+    font-size:17px;
     margin-top:12px;
-    color:black;
+    color:grey;
 }
