--- a/RDIP/Codes/CSS/style.css
+++ b/RDIP/Codes/CSS/style.css
@@ -1,7 +1,18 @@
-p{
+*{
+    margin:0px;
+    
+}
+
+
+
+#he{
+
     font-weight:bold;
     font-size:35px;
     margin-left:6px;
+    height:100px;
+    width:1500px;
+    background-color:lightblue;
 }
 select{
     margin-left:550px;
