--- a/RDIP_1/Codes/CSS/style.css
+++ b/RDIP_1/Codes/CSS/style.css
@@ -9,7 +9,7 @@
     height:1300px;
     margin-left:50px;
     width:1400px;
-    background-color:lightgoldenrodyellow;
+    background-color:lightblue;
     box-shadow:10px 10px 10px 10px lightgrey;
 }
 #exp{
@@ -111,4 +111,8 @@ td{
     margin-left:520px;
     font-size:25px;
 
+}
+#comp{
+    height:20px;
+    width:300px;
 }
